Fix up README file

--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -23,7 +23,7 @@ Parse DESCRIPTION files
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("/description")
+devtools::install_github("metacran/description")
 ```
 
 ## Usage
@@ -34,4 +34,4 @@ library(description)
 
 ## License
 
-MIT + file LICENSE © [Gabor Csardi](https://github.com/).
+MIT + file LICENSE © [Gábor Csárdi](https://github.com/).
