--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -34,4 +34,4 @@ library(description)
 
 ## License
 
-MIT + file LICENSE © [Gábor Csárdi](https://github.com/).
+MIT © [Gábor Csárdi](https://github.com/gaborcsardi).
