--- a/tests/testthat/output/to_latex.tex
+++ b/tests/testthat/output/to_latex.tex
@@ -5,13 +5,13 @@
   \item[Version] 1.0.0
   \item[Authors@R] \\
     \begin{description}
-      \item[cre] Kirill Müller <aaa@bbb.xx>
+      \item[cre] Kirill Müller <\href{mailto:aaa@bbb.xx}{aaa@bbb.xx}>
     \end{description}
   \item[Author] \{\{ Author \}\}
   \item[Maintainer] \{\{ Maintainer \}\}
-  \item[Description] Words not in the dictionary must be `quoted'. ``Double quotes'' can also be used, as well as \textbackslash\{\}\_\{\}[]^%. Must end with a full stop.
+  \item[Description] Words not in the dictionary must be `quoted'. ``Double quotes'' can also be used, as well as \textbackslash{}\_\{\}[]\^\%. Must end with a full stop.
   \item[License] CC-BY-SA
-  \item[URL] http://somewhere.io
-  \item[BugReports] http://somewhere.io/trac
+  \item[URL] \url{http://somewhere.io}
+  \item[BugReports] \url{http://somewhere.io/trac}
   \item[LazyData] true
 \end{description}
