more special characters

--- a/tests/testthat/output/to_latex.tex
+++ b/tests/testthat/output/to_latex.tex
@@ -9,7 +9,7 @@
     \end{description}
   \item[Author] \{\{ Author \}\}
   \item[Maintainer] \{\{ Maintainer \}\}
-  \item[Description] Words not in the dictionary must be `quoted'. ``Double quotes'' can also be used, as well as \textbackslash \_\{\}[]\^\%. Must end with a full stop.
+  \item[Description] Words not in the dictionary must be `quoted'. ``Double quotes'' can also be used, as well as \textbackslash \_\{\}[]\^\$\#\%. Must end with a full stop.
   \item[License] CC-BY-SA
   \item[URL] \url{http://somewhere.io}
   \item[BugReports] \url{http://somewhere.io/trac}
