force line break after `Authors@R`

--- a/tests/testthat/output/to_latex.tex
+++ b/tests/testthat/output/to_latex.tex
@@ -3,7 +3,7 @@
   \item[Package] Test.Package
   \item[Title] Must be in Title Case
   \item[Version] 1.0.0
-  \item[Authors@R] \\
+  \item[Authors@R] ~\\
     \begin{description}
       \item[cre] Kirill Müller <\href{mailto:aaa@bbb.xx}{aaa@bbb.xx}>
     \end{description}
