--- a/tests/testthat/output/to_latex.tex
+++ b/tests/testthat/output/to_latex.tex
@@ -7,11 +7,11 @@
     \begin{description}
       \item[cre] Kirill Müller <\href{mailto:aaa@bbb.xx}{aaa@bbb.xx}>
     \end{description}
-  \item[Author] \{\{ Author \}\}
   \item[Maintainer] \{\{ Maintainer \}\}
   \item[Description] Words not in the dictionary must be `quoted'. ``Double quotes'' can also be used, as well as \textbackslash \_\{\}[]\^\$\#\%. Must end with a full stop.
   \item[License] CC-BY-SA
   \item[URL] \url{http://somewhere.io}, \url{http://somewhereel.se}
   \item[BugReports] \url{http://somewhere.io/trac}
+  \item[Encoding] UTF-8
   \item[LazyData] true
 \end{description}
