Non-OO API in README

--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -18,7 +18,23 @@ knitr::opts_chunk$set(
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/description)](http://www.r-pkg.org/pkg/description)
 [![Coverage Status](https://img.shields.io/codecov/c/github/metacran/description/master.svg)](https://codecov.io/github/metacran/description?branch=master)
 
-Parse DESCRIPTION files
+Parse, manipulate and reformat DESCRIPTION files. The package
+provides two APIs, one is object oriented, the other one is
+procedural and manipulates the files *in place*.
+
+---
+
+  - [Installation](#installation)
+  - [The object oriented API](#the-oo-api)
+    - [Introduction](#introduction)
+    - [Loading or creating new `DESCRIPTION` files](#loading-or-creating-new-description-files)
+	- [Normalizing `DESCRIPTION` files](#normalizing-description-files)
+	- [Querying, changing and removing fields](#querying-changing-and-removing-fields)
+	- [Dependencies](#dependencies)
+	- [Collate fields](#collate-fields)
+	- [Authors](#authors)
+  - [The procedural API](#the-procedural-api)
+  - [License](#license)
 
 ## Installation
 
@@ -26,7 +42,7 @@ Parse DESCRIPTION files
 devtools::install_github("metacran/description")
 ```
 
-## Usage
+## The object oriented API
 
 ```{r}
 library(description)
@@ -34,8 +50,7 @@ library(description)
 
 ### Introduction
 
-This package is for manipulating R package metadata
-programatically. It uses [R6](https://github.com/wch/R6) classes.
+The object oriented API uses [R6](https://github.com/wch/R6) classes.
 
 ### Loading or creating new `DESCRIPTION` files
 
@@ -112,6 +127,33 @@ desc$get_authors()
 desc$add_author("Bugs", "Bunny", email = "bb@acme.com")
 desc$add_me()
 desc$get_authors()
+```
+
+## The procedural API
+
+The procedural API is simpler to use for one-off `DESCRIPTION`
+manipulation, since it does not require dealing with
+`description` objects. Each object oriented method has a
+procedural counterpart that works on a file, and potentially
+writes its result back to the same file.
+
+For example, adding a new dependency to `DESCRIPTION` in the
+current working directory can be done with
+
+```{r}
+desc_set_dep("newpackage", "Suggests")
+```
+
+This added `newpackage` to the `Suggests` field:
+
+```{r}
+desc_get("Suggests")
+```
+
+So the full list of dependencies are now
+
+```{r}
+desc_get_deps()
 ```
 
 ## License
