--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -8,15 +8,15 @@ knitr::opts_chunk$set(
   fig.height = 8)
 ```
 
-# description
+# desc
 
 > Parse DESCRIPTION files
 
-[![Linux Build Status](https://travis-ci.org/metacran/description.svg?branch=master)](https://travis-ci.org/metacran/description)
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/metacran/description?svg=true)](https://ci.appveyor.com/project/gaborcsardi/description)
-[![](http://www.r-pkg.org/badges/version/description)](http://www.r-pkg.org/pkg/description)
-[![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/description)](http://www.r-pkg.org/pkg/description)
-[![Coverage Status](https://img.shields.io/codecov/c/github/metacran/description/master.svg)](https://codecov.io/github/metacran/description?branch=master)
+[![Linux Build Status](https://travis-ci.org/metacran/desc.svg?branch=master)](https://travis-ci.org/metacran/desc)
+[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/metacran/desc?svg=true)](https://ci.appveyor.com/project/gaborcsardi/desc)
+[![](http://www.r-pkg.org/badges/version/desc)](http://www.r-pkg.org/pkg/desc)
+[![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/desc)](http://www.r-pkg.org/pkg/desc)
+[![Coverage Status](https://img.shields.io/codecov/c/github/metacran/desc/master.svg)](https://codecov.io/github/metacran/desc?branch=master)
 
 Parse, manipulate and reformat DESCRIPTION files. The package
 provides two APIs, one is object oriented, the other one is
@@ -39,13 +39,13 @@ procedural and manipulates the files *in place*.
 ## Installation
 
 ```{r eval = FALSE}
-source("https://raw.githubusercontent.com/MangoTheCat/remotes/master/install-github.R")$value("metacran/description")
+source("https://raw.githubusercontent.com/MangoTheCat/remotes/master/install-github.R")$value("metacran/desc")
 ```
 
 ## The object oriented API
 
 ```{r}
-library(description)
+library(desc)
 ```
 
 ### Introduction
@@ -73,7 +73,7 @@ desc2
 ### Normalizing `DESCRIPTION` files
 
 Most `DESCRIPTION` fields may be formatted in multiple equivalent
-ways. `description` does not reformat fields, unless they are
+ways. `desc` does not reformat fields, unless they are
 updated or reformatting is explicitly requested via a call to
 the `normalize()` method or using the `normalize` argument of the
 `write()` method.
