--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -39,7 +39,7 @@ procedural and manipulates the files *in place*.
 ## Installation
 
 ```{r eval = FALSE}
-source("https://raw.githubusercontent.com/MangoTheCat/remotes/master/install-github.R")$value("metacran/desc")
+source("https://raw.githubusercontent.com/MangoTheCat/remotes/master/install-github.R")$value("r-pkgs/desc")
 ```
 
 ## The object oriented API
