--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -126,6 +126,7 @@ desc <- description$new("DESCRIPTION2")
 desc$get_authors()
 desc$add_author("Bugs", "Bunny", email = "bb@acme.com")
 desc$add_me()
+desc$add_author_gh("jeroen")
 desc$get_authors()
 ```
 
