--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -39,7 +39,7 @@ procedural and manipulates the files *in place*.
 ## Installation
 
 ```{r eval = FALSE}
-source("https://install-github.me/r-lib/desc")
+install.packages("desc")
 ```
 
 ## The object oriented API
