--- a/README.Rmd
+++ b/README.Rmd
@@ -14,11 +14,13 @@ knitr::opts_chunk$set(
 
 > Parse DESCRIPTION files
 
+<!-- badges: start -->
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-green.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![R build status](https://github.com/r-lib/desc/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/desc/actions)
 [![](https://www.r-pkg.org/badges/version/desc)](https://www.r-pkg.org/pkg/desc)
 [![CRAN RStudio mirror downloads](https://cranlogs.r-pkg.org/badges/desc)](https://www.r-pkg.org/pkg/desc)
 [![Codecov test coverage](https://codecov.io/gh/r-lib/pak/branch/master/graph/badge.svg)](https://codecov.io/gh/r-lib/pak?branch=master)
+<!-- badges: end -->
 
 Parse, manipulate and reformat DESCRIPTION files. The package
 provides two APIs, one is object oriented, the other one is
