usethis::use_tidy_coc()
[ci skip]

--- a/README.Rmd
+++ b/README.Rmd
@@ -185,6 +185,12 @@ desc_get_deps()
 desc_del_dep("newpackage")
 ```
 
+## Code of Conduct
+
+Please note that the desc project is released with a
+[Contributor Code of Conduct](http://r-lib.github.io/desc/CODE_OF_CONDUCT.html).
+By contributing to this project, you agree to abide by its terms.
+
 ## License
 
 MIT © [Gábor Csárdi](https://github.com/gaborcsardi),
