--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -188,7 +188,7 @@ desc_del_dep("newpackage")
 ## Code of Conduct
 
 Please note that the desc project is released with a
-[Contributor Code of Conduct](http://r-lib.github.io/desc/dev/CODE_OF_CONDUCT.html).
+[Contributor Code of Conduct](https://r-lib.github.io/desc/dev/CODE_OF_CONDUCT.html).
 By contributing to this project, you agree to abide by its terms.
 
 ## License
