--- a/README.Rmd
+++ b/README.Rmd
@@ -17,9 +17,9 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-green.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![R-CMD-check](https://github.com/r-lib/desc/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-lib/desc/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/r-lib/desc/branch/main/graph/badge.svg)](https://app.codecov.io/gh/r-lib/desc?branch=main)
 [![](https://www.r-pkg.org/badges/version/desc)](https://www.r-pkg.org/pkg/desc)
 [![CRAN RStudio mirror downloads](https://cranlogs.r-pkg.org/badges/desc)](https://www.r-pkg.org/pkg/desc)
+[![Codecov test coverage](https://codecov.io/gh/r-lib/desc/graph/badge.svg)](https://app.codecov.io/gh/r-lib/desc)
 <!-- badges: end -->
 
 Parse, manipulate and reformat DESCRIPTION files. The package
